fixed view and edit permissions

--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -31,7 +31,11 @@
 			{{/if}}
         {{/if}}
         <div class="comment">
-			{{{submission.gradeComment}}}
+            {{#if submission.gradeComment}}
+                {{{submission.gradeComment}}}
+            {{else}}
+                <p>Kein Kommentar.</p>
+            {{/if}}
         </div>
     </div>
 </section>
