--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -21,7 +21,7 @@
     {{else}}
         <div class="comment">
 			{{#if comment}}
-				<pre>{{comment}}</pre>
+				{{{comment}}}
 			{{else}}
 				<p>Kein Kommentar.</p>
 			{{/if}}
