--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,3 +1,7 @@
+{{#content "scripts" mode="append"}}
+    <script src="/vendor/ckeditor/ckeditor.js"></script>
+    <script>CKEDITOR.replace('modaleditor');</script>
+{{/content}}
 {{#extend "homework/homework"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homework/homework.css"/>
@@ -107,14 +111,13 @@
                         {{> "homework/form-assignment"}}
                     {{/content}}
                 {{/embed}}
-                {{#embed "lib/components/modal-form" action="/homework/" method="post" class="add-modal"}}
+                {{#embed "lib/components/modal-form" method="post" class="add-modal" action="/homework/" }}
                     {{#content "fields"}}
                         {{> "homework/form-assignment"}}
                     {{/content}}
                 {{/embed}}
                 {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
                     {{#content "body"}}
-
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary btn-close">
                                 Abbrechen
