--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,6 +1,6 @@
 {{#content "scripts" mode="append"}}
     <script src="/vendor/ckeditor/ckeditor.js"></script>
-    <script>CKEDITOR.replace('modaleditor');</script>
+    <script>CKEDITOR.replace('ckeditor');</script>
 {{/content}}
 {{#extend "homework/homework"}}
     {{#content "styles" mode="append"}}
