--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -46,7 +46,7 @@
 <div class="form-group">
     <label>Klasse(n)</label>
 
-    <select name="classIds[]" required multiple data-placeholder="Klasse(n) auswählen">
+    <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
         {{#each classes}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.name}}</option>
         {{/each}}
@@ -56,7 +56,7 @@
 <div class="form-group">
     <label>Unterrichtender Lehrer</label>
 
-    <select name="teacherIds[]" required multiple data-placeholder="Lehrer auswählen">
+    <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen">
         {{#each teachers}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.lastName}}</option>
         {{/each}}
@@ -66,7 +66,7 @@
 <div class="form-group">
     <label>Schüler / Teilnehmer</label>
 
-    <select name="userIds[]" required multiple data-placeholder="Schüler auswählen">
+    <select name="userIds[]" multiple data-placeholder="Schüler auswählen">
         {{#each students}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.lastName}}</option>
         {{/each}}
