add alias to login selector

--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -45,7 +45,7 @@
                                     <select name="systemId" class="system" data-placeholder="System">
                                         <option><!-- Empty option goes here. --><option>
                                         {{#each systems}}
-                                            <option value="{{this._id}}">{{this.type}}</option>
+                                            <option value="{{this._id}}">{{this.type}}{{#if this.alias}}({{this.alias}}){{/if}}</option>
                                         {{/each}}
                                     </select>
                                 </div>
