Use flash messages for registration errors

--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -6,6 +6,9 @@
     {{#content "body"}}
         <div class="container">
             <div class="row">
+				<div class="col-xs-12">
+					{{> "lib/components/notification"}}
+				</div>
                 <div class="col-md-6 offset-md-3">
                     <hgroup>
                         <h3>{{title}}</h3>
