--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -50,7 +50,7 @@
                         {{#if ltiToolIds}}
                             {{#each ltiToolIds}}
                                 <div class="card card-block card-tool"
-                                     onclick="window.open('/courses/{{../_id}}/tools/run/{{this._id}}')">
+                                     onclick="location.href='/courses/{{../_id}}/tools/show/{{this._id}}'">
                                     <p class="card-title-directory">
                                         {{#if logo_url}}
                                             <img src={{this.logo_url}} class="float-left"
