add piwik to client

--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -26,6 +26,7 @@
         <script src="/scripts/bootstrap/bootstrap.min.js" type="text/javascript" async></script>
         <script src="/scripts/chosen/chosen.jquery.min.js" type="text/javascript" async></script>
         <script src="/scripts/base.js" type="text/javascript" async></script>
+        <script src="/scripts/piwik/piwik.js" type="text/javascript" async></script>
     {{/block}}
 </body>
 </html>
