ck editor in overview

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -120,14 +120,8 @@
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
         }
-        pre {
-          font: inherit;
-          display: inline;
-          width: 100%;
-          outline: none;
-          border: none;
-          background: transparent;
-          overflow: hidden;
+        p {
+          margin-bottom:.25rem;
         }
       }
       .dates {
