--- a/views/homework/form-assignment.hbs
+++ b/views/homework/form-assignment.hbs
@@ -27,7 +27,7 @@
 
 <div class="form-group">
     <label>Aufgabenstellung</label>
-    <textarea id="ckeditor" name="description" type="text" class="form-control" 
+    <textarea name="description" type="text" class="form-control htmleditor" 
     placeholder="Aufgabenstellung" required></textarea>
 </div>
 
