custom ckeditor in detail view

--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -40,7 +40,25 @@
         </script>
         <script src="/vendor/ckeditor/ckeditor.js"></script>
         <script>
-            CKEDITOR.replace( 'evaluation' );
+            CKEDITOR.replaceAll(function(textarea, config){
+                if (!textarea.classList.contains("customckeditor")) return false; //for only assign a class
+                config.toolbarGroups = [
+                    { name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ] },
+                    { name: 'paragraph', groups: [ 'list', 'indent', 'blocks', 'align', 'bidi', 'paragraph' ] },
+                    { name: 'links', groups: [ 'links' ] },
+                    { name: 'insert', groups: [ 'insert' ] },
+                    { name: 'document', groups: [ 'mode', 'document', 'doctools' ] },
+                    { name: 'clipboard', groups: [ 'clipboard', 'undo' ] },
+                    { name: 'editing', groups: [ 'find', 'selection', 'spellchecker', 'editing' ] },
+                    { name: 'forms', groups: [ 'forms' ] },
+                    { name: 'tools', groups: [ 'tools' ] },
+                    { name: 'others', groups: [ 'others' ] },
+                    { name: 'styles', groups: [ 'styles' ] },
+                    { name: 'colors', groups: [ 'colors' ] },
+                    { name: 'about', groups: [ 'about' ] }
+                ];
+               config.removeButtons = 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About';
+            });
         </script>
     {{/content}}
     {{#content "styles" mode="append"}}
