Delete button visible again

--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -48,6 +48,9 @@
       font-weight: 700;
       color: $colorHPIOrange;
     }
+    form.inline button{
+        background: $colorHPIRed;
+    }
     .description,
     .comment,
     .feedback {
