apple webapp + small screen loginpage fix

--- a/static/styles/authentication/login.scss
+++ b/static/styles/authentication/login.scss
@@ -41,6 +41,7 @@ body {
     }
 
     .bg-graphic {
+
         position: absolute;
         background: no-repeat center center;
         background-size: contain;
@@ -48,16 +49,26 @@ body {
         width: 300px;
         height: 300px;
 
+        @media screen and (max-width: 670px) {
+            display: none;
+        }
+
         &.bg-graphic-left {
             left: 10%;
             top: 10%;
             background-image: url(../../images/login-left.png);
+            @media screen and (max-width: 820px) {
+                left: 1%;
+            }
         }
 
         &.bg-graphic-right {
             right: 10%;
             top: 30%;
             background-image: url(../../images/login-right.png);
+            @media screen and (max-width: 820px) {
+                right: 1%;
+            }
         }
     }
 
