--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -145,6 +145,13 @@
                                                data-file-path="{{this.path}}">
                                                 <i class="fa fa-trash-o"></i>
                                             </a>
+                                            <a href="/files/file/"
+                                                target="_blank"
+                                                data-method="move"
+                                                data-file-name="{{this.name}}"
+                                                data-file-path="{{this.path}}">
+                                                <i class="fa fa-share"></i>
+                                            </a>
                                             <small class="file-info" id="{{this.name}}"></small>
                                         </div>
                                     </div>
@@ -155,11 +162,26 @@
                 </div>
             </section>
         </div>
-        
+
 
         {{#embed "lib/components/modal-form" class="edit-modal" title="Neuer Ordner" closeLabel="Abbrechen" submitLabel="Ordner erstellen"}}
             {{#content "fields"}}
                 <input type="text" class="form-control" name="new-dir-name" placeholder="Name des Ordners" required />
+            {{/content}}
+        {{/embed}}
+
+        {{#embed "lib/components/modal" class="move-modal" title="Verschieben nach:"}}
+            {{#content "body"}}
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">
+                        Abbrechen
+                    </button>
+
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        Verschieben
+                    </button>
+                </div>
             {{/content}}
         {{/embed}}
 
