--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -5,6 +5,9 @@
 
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content=$colorHPIRed>
+
     {{/block}}
 
     {{#block "styles"}}
