--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -3,6 +3,10 @@
         <link rel="stylesheet" href="/styles/authentication/login.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/pwrecovery.js" type="text/javascript"></script>
+    {{/content}}
+
     {{#content "body"}}
         <div class="container">
             <div class="row">
@@ -22,12 +26,16 @@
                             <input type="hidden" name="resetId" value="{{resetId}}" />
 
                             <div class="form-group">
-                                <div class="form-group">
-                                    <label>Passwort</label>
-                                    <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" required>
-                                </div>
+                                <label>Neues Passwort</label>
+                                <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                                       title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" required>
                             </div>
+
+                            <div class="form-group">
+                                <label>Zur Kontrolle</label>
+                                <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" required>
+                            </div>
+
 
                             <input type="submit" class="btn btn-primary btn-block" value="{{buttonLabel}}" />
                         </form>
