--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -136,6 +136,8 @@
         }
 
         .card.file {
+            min-height: 120px;
+            color: $colorHPIRed;
             &:hover {
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
                 background: #f9f9f9;
