--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
+        <meta name="apple-mobile-web-app-title" content="Schul-Cloud">
     {{/block}}
 
     {{#block "styles"}}
