--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -7,6 +7,7 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/dropzone/dropzone.js" type="text/javascript"></script>
         <script src="/scripts/files.js" type="text/javascript"></script>
+        <script src="/scripts/prettyprint.js" type="text/javascript"></script>
     {{/content}}
 
     {{#content "page"}}
