--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -21,7 +21,11 @@
 
     {{#block "scripts"}}
         <script src="/scripts/jquery/jquery.min.js" type="text/javascript"></script>
+        <script>
+            window.jQuery = jQuery;
+        </script>
         <script src="/scripts/jquery/jquery.serialize-object.js" type="text/javascript"></script>
+
         <script src="/scripts/tether/tether.min.js" type="text/javascript" async></script>
         <script src="/scripts/bootstrap/bootstrap.min.js" type="text/javascript" async></script>
         <script src="/scripts/chosen/chosen.jquery.min.js" type="text/javascript" async></script>
