--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -46,7 +46,7 @@
                                     {{/if}}
                                 </div>
                                 <div class="card-footer">
-                                    <small class="text-muted"> via {{this.client}} | 17. November 2016</small>
+                                    <small class="text-muted"> via {{this.client}}</small>
                                     {{#userHasPermission "COURSE_EDIT"}}
                                         <a class="delete-material"
                                            href="materials/{{../_id}}"
