--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -15,12 +15,39 @@
 
                 <div class="form-group">
                     <label>Name des Kurses</label>
-                    <input class="form-control" name="name" type="text" placeholder="10a" value="{{course.name}}" required />
+                    <input class="form-control" name="name" type="text" placeholder="Mathe 10a" value="{{course.name}}" required />
                 </div>
 
                 <div class="form-group">
                     <label>Beschreibung des Kurses</label>
                     <textarea class="form-control" name="description">{{course.description}}</textarea>
+                </div>
+
+                <div class="form-group">
+                    <label>Farbe des Kurses:</label>
+                <input name="color" list="courseColors" type="color" value="{{#if course.color}}{{course.color}}{{else}}#ff0000{{/if}}" placeholder="#ff0000" autocomplete=on/>
+                    <datalist id="courseColors">
+                        <option value="#F44336">
+                        <option value="#E91E63">
+                        <option value="#9C27B0">
+                        <option value="#673AB7">
+                        <option value="#304FFE">
+                        <option value="#2196F3">
+                        <option value="#03A9F4">
+                        <option value="#00BCD4">
+                        <option value="#009688">
+                        <option value="#4CAF50">
+                        <option value="#8BC34A">
+                        <option value="#CDDC39">
+                        <option value="#FFEB3B">
+                        <option value="#FFC107">
+                        <option value="#FF9800">
+                        <option value="#FF5722">
+                        <option value="#795548">
+                        <option value="#9E9E9E">
+                        <option value="#607D8B">
+                        <option value="#000000">
+                    </datalist>
                 </div>
 
                 <div class="form-group">
@@ -38,7 +65,13 @@
 
                     <select name="teacherIds[]" required multiple data-placeholder="Lehrer auswählen">
                         {{#each teachers}}
-                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.lastName}}</option>
+                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+                                {{#if this.displayName}}
+                                    {{this.displayName}}
+                                {{else}}
+                                    {{this.firstName}} {{this.lastName}}
+                                {{/if}}
+                            </option>
                         {{/each}}
                     </select>
                 </div>
@@ -48,7 +81,13 @@
 
                     <select name="userIds[]" multiple data-placeholder="Schüler auswählen">
                         {{#each students}}
-                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.lastName}}</option>
+                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+                                {{#if this.displayName}}
+                                    {{this.displayName}}
+                                {{else}}
+                                    {{this.firstName}} {{this.lastName}}
+                                {{/if}}
+                            </option>
                         {{/each}}
                     </select>
                 </div>
