--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -1,9 +1,4 @@
 <div class="form-group">
-    <label for="courseId">Kurs (Pflichtfeld):</label>
-    <select class="course-selection form-control" name="courseId" required="required">
-    </select>
-</div>
-<div class="form-group">
     <label for="name">Name (Pflichtfeld):</label>
     <input  class="form-control" type="text" name="name" required="required" value="{{name}}" />
 </div>
@@ -11,7 +6,7 @@
     <label for="logo_url">Logo (URL):</label>
     <input class="form-control" type="text" name="logo_url" value="{{logo_url}}" />
 </div>
-<div class="form-group">
+<!-- <div class="form-group">
     <label for="privacy_permission">Privatsphäre:</label>
     <select class="form-control" required="required" name="privacy_permission" value="{{privacy_permission}}">
         <option value="anonymous">Anonym</option>
@@ -19,7 +14,7 @@
         <option value="name">Nur Name</option>
         <option value="public">Öffentlich</option>
     </select>
-</div>
+</div> -->
 <div class="form-group">
     <label>Sonstige Einstellungen:</label>
     <div class="custom-fields">
@@ -37,3 +32,4 @@
 <input type="hidden" name="resource_link_id" value="{{resource_link_id}}" />
 <input type="hidden" name="url" value="{{url}}" />
 <input type="hidden" name="secret" value="{{secret}}" />
+<input type="hidden" name="courseId" value="{{courseId}}" data-force-value="true" />
