--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -122,7 +122,7 @@
                                                 data-method="move"
                                                 data-file-name="{{this.name}}"
                                                 data-file-path="{{this.path}}">
-                                                <i class="fa fa-share"></i>
+                                                <!--<i class="fa fa-share"></i>-->
                                             </a>
                                             <small class="file-info" id="{{this.name}}"></small>
                                         </div>
