--- a/static/styles/tools/tools.scss
+++ b/static/styles/tools/tools.scss
@@ -14,3 +14,13 @@
   width: 100%;
   height: 60rem;
 }
+
+// fix for kanzleramt
+.content-wrapper {
+  padding-right: 0px;
+}
+
+.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+}
