--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -7,6 +7,7 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/dropzone/dropzone.js" type="text/javascript"></script>
         <script src="/scripts/files.js" type="text/javascript"></script>
+        <script src="/scripts/prettyprint.js" type="text/javascript"></script>
     {{/content}}
 
     {{#content "page"}}
@@ -82,7 +83,9 @@
                 <div class="row">
                     {{#each files}}
                         <div class="col-sm-6 col-xs-12 col-md-4">
-                            <div class="card file">
+                            <div class="card file"
+                                onMouseOver="document.getElementById('{{this.name}}').innerHTML = writeFileSizePretty({{this.size}})"
+                                onMouseOut= "document.getElementById('{{this.name}}').innerHTML = ''">
                                 <div class="openFile">
                                     <div class="card-block">
                                         <div class="card-title">
@@ -114,6 +117,14 @@
                                                data-file-path="{{this.path}}">
                                                 <i class="fa fa-trash-o"></i>
                                             </a>
+                                            <a href="/files/file/"
+                                                target="_blank"
+                                                data-method="move"
+                                                data-file-name="{{this.name}}"
+                                                data-file-path="{{this.path}}">
+                                                <!--<i class="fa fa-share"></i>-->
+                                            </a>
+                                            <small class="file-info" id="{{this.name}}"></small>
                                         </div>
                                     </div>
                                 </div>
@@ -128,6 +139,21 @@
         {{#embed "lib/components/modal-form" class="edit-modal" title="Neuer Ordner" closeLabel="Abbrechen" submitLabel="Ordner erstellen"}}
             {{#content "fields"}}
                 <input type="text" class="form-control" name="new-dir-name" placeholder="Name des Ordners" required />
+            {{/content}}
+        {{/embed}}
+
+        {{#embed "lib/components/modal" class="move-modal" title="Verschieben nach:"}}
+            {{#content "body"}}
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">
+                        Abbrechen
+                    </button>
+
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        Verschieben
+                    </button>
+                </div>
             {{/content}}
         {{/embed}}
 
