--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -5,9 +5,13 @@
 
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
+        <meta name="apple-mobile-web-app-title" content="Schul-Cloud">
     {{/block}}
 
     {{#block "styles"}}
+        <link rel="apple-touch-icon" href= "/images/webapp.png">
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
@@ -31,6 +35,7 @@
         <script src="/scripts/chosen/chosen.jquery.min.js" type="text/javascript" async></script>
         <script src="/scripts/base.js" type="text/javascript" async></script>
         <script src="/scripts/piwik/piwik.js" type="text/javascript" async></script>
+        <script src="/scripts/ioslink.js" type="text/javascript" async></script>
     {{/block}}
 </body>
 </html>
