--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -1,8 +1,4 @@
 <div class="form-group">
-    <label class="control-label" for="title">Titel für Ihr Feedback</label>
-    <input type="text" name="title" id="title" size="30" maxlength="60" placeholder="Titel für Ihr Feedback" class="form-control" required>
-</div>
-<div class="form-group">
     <label class="control-label" for="email">Ihre E-Mail-Adresse</label><span class="text-muted float-right"> (optional)</span>
     <input type="email"
            name="email"
@@ -13,7 +9,21 @@
            class="form-control">
 </div>
 <div class="form-group">
-    <label class="control-label" for="message">Ihr Anliegen</label>
-    <textarea class="form-control" id="message" cols="50" name="message" rows="6" required>
+    <label class="control-label" for="title">Als ...</label>
+    <input type="text" name="role" id="role" placeholder="z.B. Schüler, Lehrer, Administrator, Hausmeister usw." class="form-control" required>
+</div>
+<div class="form-group">
+    <label class="control-label" for="message">möchte ich ...</label>
+    <textarea class="form-control" id="desire" cols="50" name="desire" rows="6" required placeholder="z.B. eine im System angelegte Schüleraufgabe leicht auffinden und ändern können">
+    </textarea>
+</div>
+<div class="form-group">
+    <label class="control-label" for="message">um ...</label><span class="text-muted float-right"> (optional)</span>
+    <textarea class="form-control" id="benefit" cols="50" name="benefit" rows="6" placeholder="z.B. sie zu aktualisieren">
+    </textarea>
+</div>
+<div class="form-group">
+    <label class="control-label" for="message">Akzeptanzkriterien</label><span class="text-muted float-right"> (optional)</span>
+    <textarea class="form-control" id="acceptance_criteria" cols="50" name="acceptance_criteria" rows="6" placeholder="z.B. Nach der Systemanmeldung gelange ich in maximal zwei Schritten zum Stundenkontext, kann die Schüleraufgabe dort mit einem Klick bearbeiten und die SchülerInnen bei Bedarf automatisch über die Änderung informieren.">
     </textarea>
 </div>
