--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -32,6 +32,11 @@
 
     .content-block {
         margin-bottom: 50px;
+
+        img {
+            max-width: 100%;
+            height: auto !important;
+        }
     }
 }
 
