Adjust the imag eeselection dialog

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -93,7 +93,7 @@
                                                 <div class="file-preview"
                                                      style="background-image: url({{this.thumbnail}})"></div>
                                             </div>
-                                            <a href="/files/file?file={{this.name}}&storageContext={{../storageContext}}" target="_blank">
+                                            <a class="title" href="/files/file?file={{this.name}}&storageContext={{../storageContext}}" target="_blank">
                                                 {{this.name}}
                                             </a>
                                         </div>
