bugfix - renamed class

--- a/views/homework/form-assignment.hbs
+++ b/views/homework/form-assignment.hbs
@@ -27,8 +27,7 @@
 
 <div class="form-group">
     <label>Aufgabenstellung</label>
-    <textarea name="description" type="text" class="form-control htmleditor" 
-    placeholder="Aufgabenstellung" required></textarea>
+    <textarea name="description" type="text" class="form-control customckeditor" placeholder="Aufgabenstellung" required></textarea>
 </div>
 
 <div class="form-group">
