fixed a few things

--- a/views/administration/forms/form-news.hbs
+++ b/views/administration/forms/form-news.hbs
@@ -12,5 +12,5 @@
 
 <div class="form-group">
     <label>Datum</label>
-    <input class="form-control" name="displayAt" type="datetime-local" placeholder="dd.mm.yyyy" required />
+    <input class="form-control" name="displayAt" type="datetime-local" placeholder="dd.mm.yyyy hh:mm" required />
 </div>
