added dashboard display

--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -30,6 +30,11 @@
 
     h5 {
         color: $colorHPIRed;
+        display: inline-block;
+    }
+
+    a#showAll {
+        float: right;
     }
 
     h6 {
