--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -209,53 +209,24 @@
                 <section class="section-news">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-sm-12 no-padding"><h5>Neuigkeiten</h5></div>
+                            <div class="col-sm-12 no-padding">
+                                <h5>Neuigkeiten</h5>
+                                <a href="/news/" id="showAll" className="btn btn-secondary">
+                                    Alle anzeigen
+                                </a>
+                            </div>
                         </div>
                         <div class="row articles">
                             <div class="card-group">
-                                <div class="card card-block"><strong class="card-text">Willkommen im Schuljahr
-                                    2016!</strong>
-                                    <p class="card-text">Die Schulleitung heißt alle (neuen) Schüler im neuen Schuljahr
-                                        willkommen. Auch dieses Jahr haben wir wieder viele neue Veranstaltungen für
-                                        Euch geplant. Unter anderem ein Besuch bei der UNESCO und einen Schüleraustausch
-                                        mit einer Schule im Silicon Valley der Klasse 10. Viel Erfolg wünscht Euch das
-                                        Lehrerkolleg!</p>
-                                    <p class="card-text">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </p>
-                                    <a href="#"> weiterlesen</a></div>
-                                <div class="card card-block"><strong class="card-text">Forschungsprojekt Umwelt</strong>
-                                    <p class="card-text">Um die Energieeffizienz von Elektroautos zu beweisen, führten
-                                        die Schüler der 11. Klasse in den vergangenen Monaten verschiedene Experimente
-                                        durch. Unter Anderem mit einem Tesla Model X auf der Langstrecke von Berlin nach
-                                        Köln. Hierbei fanden sie heraus, dass insgesamt nur ¼ der Energie der
-                                        konventionellen Treibstoffe benötigt wurde.</p>
-                                    <p class="card-text">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </p>
-                                    <a href="#"> weiterlesen</a></div>
-                                <div class="card card-block"><strong class="card-text">Preisverleihung
-                                    Sommerfestspiele</strong>
-                                    <p class="card-text">Auch in diesem Jahr gab es wieder herausragende sportliche
-                                        Leistungen. Unter Anderem ein neuer Schulrekord im 100m-Lauf bei den Mädchen und
-                                        beim Weitsprung der Jungen. Auch für die Versorgung mit Wasser und Energieriegel
-                                        wurde durch den Förderverein gesorgt. Die Urkundenübergabe findet am 30. Juni um
-                                        13 Uhr in der Sporthalle statt.</p>
-                                    <p class="card-text">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </p>
-                                    <a href="#"> weiterlesen</a></div>
-                                <div class="card card-block"><strong class="card-text">Einführung der
-                                    Schul-Cloud</strong>
-                                    <p class="card-text">Um auch nächsten Jahrzehnt des 21. Jahrhunderts bildungsmäßig
-                                        spitze aufgestellt zu sein, nutzen wir ab sofort die Schul-Cloud. Diese
-                                        ermöglicht es unter Anderem, sich mit den bestehenden Moodle-Accounts
-                                        anzumelden, Office zu nutzen und auf Bildungsangebote zuzugreifen. Ebenfalls ist
-                                        es möglich, aktualisierte Stundenpläne und Aufgaben einzusehen.</p>
-                                    <p class="card-text">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </p>
-                                    <a href="#"> weiterlesen</a></div>
+                                {{#each news}}
+                                    <div class="card card-block"><strong class="card-text">{{this.title}}</strong>
+                                        <p class="card-text">{{truncate this.content}}</p>
+                                        <p class="card-text">
+                                            <small class="text-muted">{{this.timeString}}</small>
+                                        </p>
+                                        <a href="/news/{{this._id}}">weiterlesen</a>
+                                    </div>
+                                {{/each}}
                             </div>
                         </div>
                     </div>
