--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -120,12 +120,12 @@
                                 <div class="row">
                                     <div class="form-group col-md-6">
                                         <label>Von</label>
-                                        <input name="startDate" id="startDate" type="date" class="form-control"/>
+                                        <input name="startDate" id="startDate" type="date" class="form-control" value="{{course.startDate}}"/>
                                     </div>
 
                                     <div class="form-group col-md-6">
                                         <label>Bis</label>
-                                        <input name="untilDate" id="untilDate" type="date" class="form-control"/>
+                                        <input name="untilDate" id="untilDate" type="date" class="form-control" value="{{course.untilDate}}"/>
                                     </div>
                                 </div>
 
