fix mobile spacing

--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -20,7 +20,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://hpi.de/open-campus/hpi-initiativen/schulcloud"
-                       target="_blank">über Schul-Cloud</a>
+                       target="_blank">About</a>
                 </li>
             </ul>
         </nav>
