--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -138,6 +138,9 @@
         .card.file {
             min-height: 120px;
             color: $colorHPIRed;
+            text-overflow: ellipsis;
+            overflow:hidden;
+
             &:hover {
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
                 background: #f9f9f9;
