--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -60,6 +60,7 @@ footer {
 	width: 100%;
 	margin-top: 40px;
 	position: inherit;
+	@media screen and (max-height: 700px) { top: 510px; }
 	bottom: 0;
 	right: 0;
 	left: 0;
