--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
         <meta name="apple-mobile-web-app-title" content="Schul-Cloud">
+        <meta name="theme-color" content="#b10438">
     {{/block}}
 
     {{#block "styles"}}
@@ -31,7 +32,6 @@
             window.jQuery = jQuery;
         </script>
         <script src="/scripts/jquery/jquery.serialize-object.js" type="text/javascript"></script>
-
         <script src="/scripts/tether/tether.min.js" type="text/javascript" async></script>
         <script src="/scripts/bootstrap/bootstrap.min.js" type="text/javascript" async></script>
         <script src="/scripts/chosen/chosen.jquery.min.js" type="text/javascript" async></script>
