add link to course onClick course-events

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -55,6 +55,9 @@
         box-shadow: 0 1px 1px 0 #C7C7C7 inset;
         background: none repeat scroll 0 0;
         margin-bottom: 30px;
+        i {
+            cursor: pointer;
+        }
     }
 }
 
